--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,146 +1,254 @@
-Chrabaszcz:
+Neil Gordon Alldrin:
+  url: https://www.linkedin.com/in/neil-alldrin-8aaa5a8/
+
+Aditya Avinash:
+  url: https://www.linkedin.com/in/adityaavinash/
+
+MohammadHossein Bateni:
+  url: https://research.google/people/bateni/
+
+Gabriel Berger:
+  url: https://www.linkedin.com/in/gabriel-berger-1a5b714/
+
+Andrew Bunner:
+  url: https://www.linkedin.com/in/andrewbunner/
+
+Alan Bush:
+  url: https://researchers.mgh.harvard.edu/profile/20432489/Alan-Bush
+
+Ayan Chakrabarti:
+  url: https://projects.ayanc.org/
+
+Chih-chun Chia:
+  url: https://www.linkedin.com/in/chih-chun-chia-b50a1b35/
+
+Anna Chrabaszcz:
   url: https://www.lrdc.pitt.edu/people/researcher-detail.cshtml?id=1976
 
-Crammond:
+Donald J. Crammond:
   url: http://www.neurosurgery.pitt.edu/person/donald-crammond
 
-Dastolfo-Hromack:
+Christina Dastolfo-Hromack:
   url: https://www.linkedin.com/in/christina-dastolfo-hromack-9769ab20/
 
-Dickey:
+Giulia DeSalvo:
+  url: https://research.google/people/106565/
+
+Michael Walsh Dickey:
   url: https://www.shrs.pitt.edu/people/michael-walsh-dickey
 
-Faloutsos:
+Tushar Dogra:
+  url: https://www.linkedin.com/in/tushar-dogra-28058557/
+
+Christos Faloutsos:
   url: http://www.cs.cmu.edu/~christos/
 
-Fiez:
+Tiantian Fang:
+  url: https://www.linkedin.com/in/tiantian-fang/
+
+Vittorio Ferrari:
+  url: https://sites.google.com/view/vittoferrari
+
+Julie A. Fiez:
   url: https://www.lrdc.pitt.edu/people/researcher-detail.cshtml?id=10
 
-Fu:
+Xiao Fu:
   url: http://people.oregonstate.edu/~fuxia/
 
-Fu*:
+Xiao Fu*:
   url: http://people.oregonstate.edu/~fuxia/
 
-Fu<nobr><em>*</em></nobr>:
+Xiao Fu<nobr><em>*</em></nobr>:
   url: http://people.oregonstate.edu/~fuxia/
 
-Holt:
-  url: https://www.cmu.edu/dietrich/psychology/people/core-training-faculty/holt-lori.html
+Ariel Fuxman:
+  url: https://scholar.google.com/citations?user=pyzFbV0AAAAJ&hl=en
 
-Huang:
-  url: https://sites.google.com/a/umn.edu/huang663/
-
-Huang*:
-  url: https://sites.google.com/a/umn.edu/huang663/
-
-Huang<nobr><em>*</em></nobr>:
-  url: https://sites.google.com/a/umn.edu/huang663/
-
-Gordon:
+Geoff Gordon:
   url: http://www.cs.cmu.edu/~ggordon/
 
-Leordeanu:
+Geoffrey J. Gordon:
+  url: http://www.cs.cmu.edu/~ggordon/
+
+Sven Gowal:
+  url: https://scholar.google.com/citations?user=7wclGnQAAAAJ&hl=en
+
+Kenji Hata:
+  url: https://www.linkedin.com/in/kenjihata/
+
+Kenji Hata<nobr><em>*</em></nobr>:
+  url: https://www.linkedin.com/in/kenjihata/
+
+Hussein Hazimeh:
+  url: https://www.hazimeh.com/
+
+Lori L. Holt:
+  url: https://www.cmu.edu/dietrich/psychology/people/core-training-faculty/holt-lori.html
+
+Kejun Huang:
+  url: https://sites.google.com/a/umn.edu/huang663/
+
+Kejun Huang*:
+  url: https://sites.google.com/a/umn.edu/huang663/
+
+Kejun Huang<nobr><em>*</em></nobr>:
+  url: https://sites.google.com/a/umn.edu/huang663/
+
+Merve Kaya:
+  url: https://www.linkedin.com/in/emkaya/
+
+Dongjin Kwon:
+  url: https://scholar.google.com/citations?user=R_wFyBsAAAAJ&hl=en
+
+Ranjay Krishna:
+  url: https://ranjaykrishna.com/index.html
+
+Marius Leordeanu:
   url: https://sites.google.com/site/mariusleordeanu/home
 
-Lio:
+Pietro Lio:
   url: https://www.cl.cam.ac.uk/~pl219/
 
-Lipski:
+Witold J. Lipski:
   url: http://www.neurosurgery.pitt.edu/person/witold-lipski
 
-Mitchell:
+Chun-Ta Lu:
+  url: https://www2.cs.uic.edu/~clu/
+
+Enming Luo:
+  url: https://www.linkedin.com/in/enming-luo-a1018614/
+
+Yu-Han Lyu:
+  url: https://www.linkedin.com/in/yu-han-lyu-a7071848/
+
+Tom Mitchell:
   url: http://www.cs.cmu.edu/~tom/
 
-Movshovitz-Attias:
+Dana Movshovitz-Attias:
   url: http://www.cs.cmu.edu/~dmovshov/
 
-Negrinho:
+Renato Negrinho:
   url: https://www.cs.cmu.edu/~negrinho/
 
-Neubig:
+Graham Neubig:
   url: http://www.phontron.com/
 
-Neumann:
+W. J. Neumann:
   url: https://www.researchgate.net/profile/Wolf_Julian_Neumann
 
-Papalexakis:
+Evangelos Papalexakis:
   url: http://www.cs.ucr.edu/~epapalex/
 
-Poczos:
+Barnabás Poczos:
   url: http://www.cs.cmu.edu/~bapoczos/
 
-Póczos:
+Barnabás Póczos:
   url: http://www.cs.cmu.edu/~bapoczos/
 
-Platanios:
+Emmanouil Antonios Platanios:
   url: http://platanios.org/
 
-Platanios*:
+Emmanouil Antonios Platanios*:
   url: http://platanios.org/
 
-Platanios<nobr><em>*</em></nobr>:
+Emmanouil Antonios Platanios<nobr><em>*</em></nobr>:
   url: http://platanios.org/
 
-Ravi:
+Wei Qiao:
+  url: https://www.linkedin.com/in/wayneqiao/
+
+Cyrus Rashtchian:
+  url: https://sites.google.com/site/cyrusrashtchian/home
+
+Sujith Ravi:
   url: http://www.sravi.org/
 
-Richardson:
+Javier A Rey:
+  url: https://www.linkedin.com/in/javier-rey-155a1317/
+
+R. Mark Richardson:
   url: http://www.neurosurgery.pitt.edu/person/mark-richardson
 
-Shavit:
+Yoli Shavit:
   url: https://www.linkedin.com/in/yoli-shavit-76832856/?originalSubdomain=uk
 
-Shaiman:
+Susan Shaiman:
   url: https://www.shrs.pitt.edu/people/susan-shaiman
 
-Sidiropoulo:
+Nicholas Sidiropoulo:
   url: http://people.ece.umn.edu/~nikos/
 
-Smola:
+Alex Smola:
   url: https://alex.smola.org/
 
-Song:
+Alexander J. Smola:
+  url: https://alex.smola.org/
+
+Hyun Ah Song:
   url: http://www.cs.cmu.edu/~hyunahs/
 
-Song*:
+Hyun Ah Song*:
   url: http://www.cs.cmu.edu/~hyunahs/
 
-Song<nobr><em>*</em></nobr>:
+Hyun Ah Song<nobr><em>*</em></nobr>:
   url: http://www.cs.cmu.edu/~hyunahs/
 
-Stoica:
+George Stoica:
   url: https://www.linkedin.com/in/george--stoica/
 
-Stoica*:
+George Stoica*:
   url: https://www.linkedin.com/in/george--stoica/
 
-Stoica<nobr><em>*</em></nobr>:
+George Stoica<nobr><em>*</em></nobr>:
   url: https://www.linkedin.com/in/george--stoica/
 
-Talukdar:
+Florian Stimberg:
+  url: https://uk.linkedin.com/in/florian-stimberg-71773576
+
+Sasan Tavakkol:
+  url: https://scholar.google.com/citations?user=l9uC2D0AAAAJ&hl=en
+
+Partha Talukdar:
   url: http://talukdar.net/
 
-Tomkins:
+Mehmet Tek:
+  url: https://www.linkedin.com/in/mehmettek
+
+Andrew Tomkins:
   url: https://ai.google/research/people/author8038/
 
-Toneva:
+Mariya Toneva:
   url: http://www.cs.cmu.edu/~mktoneva/
 
-Toneva*:
+Mariya Toneva*:
   url: http://www.cs.cmu.edu/~mktoneva/
 
-Toneva<nobr><em>*</em></nobr>:
+Mariya Toneva<nobr><em>*</em></nobr>:
   url: http://www.cs.cmu.edu/~mktoneva/
 
-Turner:
+Robert S. Turner:
   url: https://www.neurobio.pitt.edu/faculty/turner.htm
 
-Viswanathan:
+Edward Vendrow<nobr><em>*</em></nobr>:
+  url: https://edwardv.com/
+
+Edward Vendrow:
+  url: https://edwardv.com/
+
+Krishnamurthy Viswanathan:
   url: https://www.linkedin.com/in/krishnamurthy-viswanathan-14b65a42/
 
-Wehbe:
+Dengyu Wang:
+  url: https://scholar.google.com/citations?user=nApDWGoAAAAJ&hl=en
+
+Yuan Wang:
+  url: https://research.google/people/YuanWang/
+
+Noah Wang:
+  url: https://www.linkedin.com/in/noah-f-wang-83872552/
+
+Leila Wehbe:
   url: https://www.cs.cmu.edu/~lwehbe/
 
-Zhao:
+Han Zhao:
   url: https://www.cs.cmu.edu/~hzhao1/
