--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -16,6 +16,9 @@ ICML:
 ICLR:
   url: https://iclr.cc/
 
+ICCV:
+  url: https://ieeexplore.ieee.org/xpl/conhome/1000149/all-proceedings
+
 NAACL:
   url: https://naacl2019.org/
 
@@ -39,3 +42,6 @@ JNeurosci:
 
 HBM:
   url: https://www.humanbrainmapping.org
+
+WSDM:
+  url: https://www.wsdm-conference.org/
