--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -28,6 +28,9 @@ Anna Chrabaszcz:
 Donald J. Crammond:
   url: http://www.neurosurgery.pitt.edu/person/donald-crammond
 
+Jan Dlabal:
+  url: https://scholar.google.com/citations?user=2fo_v44AAAAJ&hl=en
+
 Christina Dastolfo-Hromack:
   url: https://www.linkedin.com/in/christina-dastolfo-hromack-9769ab20/
 
@@ -39,6 +42,9 @@ Michael Walsh Dickey:
 
 Tushar Dogra:
   url: https://www.linkedin.com/in/tushar-dogra-28058557/
+
+Tom Duerig:
+  url: https://research.google/people/tom-duerig/
 
 Christos Faloutsos:
   url: http://www.cs.cmu.edu/~christos/
@@ -78,6 +84,9 @@ Kenji Hata:
 
 Kenji Hata<nobr><em>*</em></nobr>:
   url: https://www.linkedin.com/in/kenjihata/
+
+Yushi Hu:
+  url: https://yushi-hu.github.io/
 
 Hussein Hazimeh:
   url: https://www.hazimeh.com/
@@ -226,6 +235,9 @@ Mariya Toneva*:
 Mariya Toneva<nobr><em>*</em></nobr>:
   url: http://www.cs.cmu.edu/~mktoneva/
 
+Imad Eddine Toubal:
+  url: https://www.linkedin.com/in/imadtoubal
+
 Robert S. Turner:
   url: https://www.neurobio.pitt.edu/faculty/turner.htm
 
@@ -250,5 +262,15 @@ Noah Wang:
 Leila Wehbe:
   url: https://www.cs.cmu.edu/~lwehbe/
 
+Hao Xiong:
+  url: https://www.linkedin.com/in/motionlife/
+
 Han Zhao:
   url: https://www.cs.cmu.edu/~hzhao1/
+
+Howard Zhou:
+  url: https://www.linkedin.com/in/howard-zhou-0a34b84/
+
+Wenlei Zhou:
+  url: https://www.linkedin.com/in/wenlei-zhou-59073a236/
+
