--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -7,6 +7,9 @@ AAAI:
 CMU:
   url: http://www.ml.cmu.edu/
 
+CVPR:
+  url: https://cvpr.thecvf.com/
+
 EMIM:
   url: http://www.e-smi.eu/index.php?id=emim-2015-tubingen
 
